# architecture

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
1.SquareRoots/: CMakeLists.txt
1_SquareRoots/: CMakeLists.txt
1_SquareRoots/test/: square_roots_test.cpp
1_square_roots/: CMakeLists.txt
2_game/: CMakeLists.txt
2_game/include/: game.hpp  primitives.hpp
2_game/test/: game_test.cpp
3_exceptions/: CMakeLists.txt
3_exceptions/include/: cmd_loop.hpp  command_impl.hpp  command_interface.hpp  exceptions_impl.hpp  exceptions_interface.hpp  queue_impl.hpp  queue_interface.hpp
3_exceptions/src/: command_impl.cpp  exceptions_impl.cpp
3_exceptions/test/: exceptions_test.cpp
4_command/: CMakeLists.txt
4_command/include/: command_exception_impl.hpp  command_impl.hpp  command_interface.hpp  fuel_consuming_obj_interface.hpp  macro_impl.hpp
4_command/test/: command_test.cpp
include/: square_roots.hpp
test/: square_roots_test.cpp
